--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #323230;
+  --foreground: #fcf5e4;
 }
 
 @theme inline {
