--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,15 @@
   --color-secondary: var(--secondary);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-chicago: 'Chicago', 'sans-serif';
+}
+
+@font-face {
+  font-family: 'Chicago';
+  src: url('../../public/fonts/Chicago.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @media (prefers-color-scheme: dark) {
