--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
-@import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Eczar:wght@400..800&display=swap');
 
+@import 'tailwindcss';
 @plugin 'tailwindcss-animate';
 
 @custom-variant dark (&:is(.dark *));
@@ -47,6 +48,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-chicago: 'Chicago', 'sans-serif';
+  --font-garamond: 'EB Garamond', 'serif';
 }
 
 /* global.css */
