--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,9 @@
   .cursor-pointer {
     cursor: url('/assets/cursor-pointer.png'), pointer;
   }
+  .cursor-grab {
+    cursor: url('/assets/cursor-drag.png'), grab;
+  }
 }
 
 @font-face {
@@ -153,107 +156,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
-.pixel-corners,
-.pixel-corners--wrapper {
-  clip-path: polygon(
-    0px calc(100% - 8px),
-    4px calc(100% - 8px),
-    4px calc(100% - 4px),
-    8px calc(100% - 4px),
-    8px 100%,
-    calc(100% - 8px) 100%,
-    calc(100% - 8px) calc(100% - 4px),
-    calc(100% - 4px) calc(100% - 4px),
-    calc(100% - 4px) calc(100% - 8px),
-    100% calc(100% - 8px),
-    100% 8px,
-    calc(100% - 4px) 8px,
-    calc(100% - 4px) 4px,
-    calc(100% - 8px) 4px,
-    calc(100% - 8px) 0px,
-    8px 0px,
-    8px 4px,
-    4px 4px,
-    4px 8px,
-    0px 8px
-  );
-  position: relative;
-}
-.pixel-corners {
-  border: 8px solid transparent;
-}
-.pixel-corners--wrapper {
-  width: fit-content;
-  height: fit-content;
-}
-.pixel-corners--wrapper .pixel-corners {
-  display: block;
-  clip-path: polygon(
-    8px 12px,
-    12px 12px,
-    12px 8px,
-    calc(100% - 12px) 8px,
-    calc(100% - 12px) 12px,
-    calc(100% - 8px) 12px,
-    calc(100% - 8px) calc(100% - 12px),
-    calc(100% - 12px) calc(100% - 12px),
-    calc(100% - 12px) calc(100% - 8px),
-    12px calc(100% - 8px),
-    12px calc(100% - 12px),
-    8px calc(100% - 12px)
-  );
-}
-.pixel-corners::after,
-.pixel-corners--wrapper::after {
-  content: '';
-  position: absolute;
-  clip-path: polygon(
-    0px calc(100% - 8px),
-    4px calc(100% - 8px),
-    4px calc(100% - 4px),
-    8px calc(100% - 4px),
-    8px 100%,
-    calc(100% - 8px) 100%,
-    calc(100% - 8px) calc(100% - 4px),
-    calc(100% - 4px) calc(100% - 4px),
-    calc(100% - 4px) calc(100% - 8px),
-    100% calc(100% - 8px),
-    100% 8px,
-    calc(100% - 4px) 8px,
-    calc(100% - 4px) 4px,
-    calc(100% - 8px) 4px,
-    calc(100% - 8px) 0px,
-    8px 0px,
-    8px 4px,
-    4px 4px,
-    4px 8px,
-    0px 8px,
-    0px 50%,
-    8px 50%,
-    8px 12px,
-    12px 12px,
-    12px 8px,
-    calc(100% - 12px) 8px,
-    calc(100% - 12px) 12px,
-    calc(100% - 8px) 12px,
-    calc(100% - 8px) calc(100% - 12px),
-    calc(100% - 12px) calc(100% - 12px),
-    calc(100% - 12px) calc(100% - 8px),
-    12px calc(100% - 8px),
-    12px calc(100% - 12px),
-    8px calc(100% - 12px),
-    8px 50%,
-    0px 50%
-  );
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #323230;
-  display: block;
-  pointer-events: none;
-}
-.pixel-corners::after {
-  margin: -8px;
 }
