fix: correct password

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,7 @@
   --font-mono: var(--font-geist-mono);
   --font-chicago: 'Chicago', 'sans-serif';
   --font-garamond: 'EB Garamond', 'serif';
+  --font-eczar: 'Eczar', 'serif';
 }
 
 /* global.css */
